2010-01-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/radio-32.png,
	utils/radio-19.png,
	utils/radio-128.png,
	utils/radio-48.png: Add icons with Public Domain license from
	http://openclipart.org/media/files/neoguiri/8233

2010-01-10  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/jquery.timers.js,
	utils/player.html,
	utils/player.js: Add alarm support.
	* utils/player.js: Fix the bug of alarm.
	* utils/player.js: Fix the compatible problem with IE8.

2010-01-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.css,
	utils/player.html,
	utils/player.js: Adjust UI.

2010-01-07  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.js: Add autostart.

2010-01-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.js: Fix the compatible problem with IE8.
	* utils/player.js: Refactor for max compatibility.
	* utils/player.html: Adjust UI.
	* utils/player.css,
	utils/player.html,
	utils/player.js: Adjust UI.
	* utils/player.css,
	utils/player.html,
	utils/player.js: Adjust UI.
	* utils/player.css,
	utils/player.js: Adjust UI.
	* utils/player.js: Change the behavior of control.

2010-01-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/player.html,
	utils/player.js: Use unobtrusive JavaScript.
	* utils/player.js: Refactor.
	* utils/player.html,
	utils/player.js: Refactor.
	* utils/hichannel.json,
	utils/hichannel.yaml,
	utils/player.js: Refactor and remove bad url.

2010-01-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/hichannel.html,
	utils/hichannel.json,
	utils/hichannel.py: Add new mechanism about JSON.
	* utils/hichannel.html,
	utils/hichannel.json,
	utils/hichannel.py,
	utils/hichannel.yaml,
	utils/player.html: Add audio player of HTML5 and adjust data format.

2010-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/Makefile.am,
	src/betaradio.c,
	src/gstplay.c,
	src/streamplayer.h: Refactor for abstract stream player.