@@ -5,6 +5,7 @@
         <title>網路電台</title>
         <link rel="stylesheet" type="text/css" href="player.css"/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+        <script type="text/javascript" src="jquery.cookie.js"></script>
         <script type="text/javascript" src="jquery.timers.js"></script>
         <script type="text/javascript" src="player.js"></script>
     </head>
